--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Practica 2</title>
 </head>
 <body>
-    <body>
+    <script src="/node_modules/three/build/three.js"></script>
+    <script src="/script.js"></script>
         <div class="sliderContainer">
-<font color='white'>
+<font color='black'>
 Traslación X -5<input class="translationX" id="xTranslation" type="range" min="-5" max="5" step="0.1" value="0"/>5
 Escalamiento X 0.2<input class="scalingX" id="xScaling" type="range" min="0.2" max="2" step="0.01" value="1.0"/>2
 Rotación X 0<input class="rotationX" id="xRotation" type="range" min="0" max="10" step="1" value="0">10<br>
@@ -23,11 +24,11 @@ Escalamiento Z 0.2<input class="scalingZ" id="zScaling" type="range" min="0.2" m
 Rotación Z 0<input class="rotationZ" id="zRotation" type="range" min="0" max="10" step="1" value="0">10</font><br>
 
 </div>
-<canvas id="gl-canvas" width="512" height="512">
+<canvas id="gl-canvas" width="512" height="512">THREE JS CANVAS
 </canvas>
 
 <br/> 
 
 </body>
-</body>
+
 </html>
