--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 <body>
 
-
-Traslación X -5<input class="translationX" id="xTranslation" type="range" min="-1" max="1" step="0.1" value="0"/>5
-Escalamiento X 0.2<input class="scalingX" id="xScaling" type="range" min="0.2" max="2" step="1" value="1.0"/>2
-Rotación X 0<input class="rotationX" id="xRotation" type="range" min="0" max="10" step="1" value="0">10<br>
-
-Traslación Y -5<input class="translationY" id="yTranslation" type="range" min="-5" max="5" step="0.1" value="0"/>5
+<br>
+Traslación X -5<input class="translationX" id="xTranslation" type="range" min=-80" max="80" step="1" value="0"/>5
+Escalamiento X 0.2<input class="scalingX" id="xScaling" type="range" min="0" max="2" step="0.1" value="0"/>2
+Rotación X 0<input class="rotationX" id="xRotation" type="range" min="0" max="1" step="0.1" value="0">10<br>
+</br>
+Traslación Y -5<input class="translationY" id="yTranslation" type="range" min=-80" max="80" step="1" value="0"/>5
 Escalamiento Y 0.2<input class="scalingY" id="yScaling" type="range" min="0.2" max="2" step="0.01" value="1.0"/>2
-Rotación Y 0<input class="rotationY" id="yRotation" type="range" min="0" max="10" step="1" value="0">10<br>
+Rotación Y 0<input class="rotationY" id="yRotation" type="range" min="0" max="1" step="0.1" value="0">10<br>
 
-Traslación Z -5<input class="translationZ" id="zTranslation" type="range" min="-5" max="5" step="0.1" value="0"/>5
+Traslación Z -5<input class="translationZ" id="zTranslation" type="range" min=-80" max="80" step="1" value="0"/>5
 Escalamiento Z 0.2<input class="scalingZ" id="zScaling" type="range" min="0.2" max="2" step="0.01" value="1.0"/>2
-Rotación Z 0<input class="rotationZ" id="zRotation" type="range" min="0" max="10" step="1" value="0">10</font><br>
+Rotación Z 0<input class="rotationZ" id="zRotation" type="range" min="0" max="1" step="0.1" value="0">10<br>
 
 
 
